Added more memory for tests.